# hse_mag_diplom

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_quickstart.ipynb  01_baselines_viterbi_bcjr.ipynb  02_train_neural_viterbi.ipynb  03_train_neural_bcjr.ipynb  04_compare_all.ipynb  05_reproduce_from_saved_signals.ipynb
outputs/: README.md
outputs/runs/: notebook_baseline_run_notebook_config.yaml  notebook_compare_all_notebook_config.yaml  notebook_nb_train_notebook_config.yaml  notebook_nv_train_notebook_config.yaml  notebook_reproduce_notebook_config.yaml
scripts/: compare_all.sh  run_awgn_baselines.sh  train_neural_bcjr.sh  train_neural_viterbi.sh
src/comm_ai/: PROJECT_STRUCTURE.md  __init__.py
src/comm_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bcjr.py  test_checkpoint_loading.py  test_cli_run.py  test_reproducibility.py  test_run_reuse_saved_signals.py  test_training_checkpoint.py  test_trellis.py  test_viterbi.py
для запуска/: README.md  RESEARCH_EXTENSION_ROADMAP.md  RESEARCH_PROGRAM.md  TRAINING_CYCLE_GUIDE.md  demo_helpers.py  demo_main.ipynb
для запуска/backups/: README.md
для запуска/batch_runs/: run_research_matrix.py  run_research_matrix.txt  run_single_config.py
для запуска/configs/: level_1_awgn_fast.yaml  level_2_awgn_dense.yaml  level_3_amplitude_mismatch.yaml  level_3_burst.yaml  level_3_noise_mismatch.yaml  level_3_rayleigh.yaml  level_4_impulsive_mismatch.yaml  level_4_rayleigh_mismatch.yaml
для запуска/таблицы для сравнения/: nb_case.csv  neural_case_pair.csv  nv_case.csv  wins_nb.csv  (+2 more)
(+67 files in other folders)
